test/files/neg/classtags_dont_use_typetags.check
classtags_dont_use_typetags.scala:2: error: No ArrayTag available for T
  def foo[T: TypeTag] = Array[T]()
                                ^
one error found
